--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     modRuntimeOnly "at.petra-k.paucal:paucal-forge-${minecraftVersion}:${paucalVersion}"
     modRuntimeOnly "vazkii.patchouli:Patchouli:${minecraftVersion}-${patchouliVersion}"
 
-    runtimeOnly "thedarkcolour:kotlinforforge:$project.forgeKotlinVersion"
+    include("thedarkcolour:kotlinforforge:$project.forgeKotlinVersion")
+    modCompileOnly("thedarkcolour:kotlinforforge:$project.forgeKotlinVersion")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
